# tang

./: .travis.yml  Makefile.am  configure.ac  eng_jose.c  tangd.socket.in
clt/: Makefile.am  adv.c  clt.h  http.c  http.h  rec.c  rec.h  tang.c
clt/clevis/: tang.c
clt/nagios/: tang.c
src/: Makefile.am
src/clt/: Makefile.am  adv.c  adv.h  http.c  rec.c  tang.c
src/srv/: Makefile.am  eng.h  eng_jose.c  eng_openssl.c  tang-httpd.c  tang-jrpcd.c  tang-keyd.c  tangd.c  tangd.socket.in
src/tests/: Makefile.am  clt.c  keyd.c  srv.c  srv.h
srv/: Makefile.am  eng.h  eng_jose.c  tangd-keygen  tangd.service.in
